Fixes to scrollbar issue

--- a/google-homepage/styles.css
+++ b/google-homepage/styles.css
@@ -1,8 +1,12 @@
+* {
+  box-sizing: border-box;
+}
 body {
   padding: 0;
   margin: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 #top-nav {
   display: flex;
